--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@ng-bootstrap/ng-bootstrap": "^5.1.0",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
-    "ngx-owl-carousel-o": "^2.0.1",
+    "ngx-pagination": "^4.1.0",
     "popper.js": "^1.15.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
